added a typing effect

--- a/Frontend/src/chat.css
+++ b/Frontend/src/chat.css
@@ -26,6 +26,10 @@
     width: fit-content;
 }
 
-.gptMessage{
+.hljs{
+    border-radius: 14px !important;
+}
 
+pre{
+    white-space: pre-wrap;
 }
